[IA-828] - Fix z-index of popup elements

--- a/packages/ui-react/src/DatePicker/styles.css
+++ b/packages/ui-react/src/DatePicker/styles.css
@@ -55,7 +55,7 @@
   width: 275px;
   left: -1px;
   top: 0px;
-  z-index: 1;
+  z-index: 1000;
   background: white;
   border: 1px solid #bcbcbc;
   border-top: none;
